--- a/res/values/elixir_strings.xml
+++ b/res/values/elixir_strings.xml
@@ -32,4 +32,7 @@
     <!-- Elixir version preference -->
     <string name="Elixir_version">"Elixir version"</string>
 
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Google Play</string>
+
 </resources>
